test/fail_compilation/fail69.d

class C
{
    static const int x;

    void foo()
    {
	x = 4;
    }

    static this()
    {
	x = 5;
    }
}
